--- a/src/App.css
+++ b/src/App.css
@@ -78,10 +78,44 @@
   font-size: calc(10px + 2vmin);
   color: white;
   padding-bottom: 35px;
+  padding:50px;
+
+  /* margin-top:30px; */
+}
+
+
+
+
+
+
+
+
+
+
+.App-header-pesan {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding-bottom: 35px;
   padding:20px;
 
   /* margin-top:30px; */
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
